--- a/Backend/render.yaml
+++ b/Backend/render.yaml
@@ -2,10 +2,11 @@ services:
   - type: web
     name: smart-fleet-backend
     env: python
+    plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn your_project_name.wsgi
+    startCommand: gunicorn Backend.wsgi
     envVars:
       - key: DJANGO_SETTINGS_MODULE
-        value: your_project_name.settings
+        value: Backend.settings
       - key: PYTHON_VERSION
         value: 3.11
