--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,29 @@
 asgiref==3.9.1
+certifi==2025.7.9
+cffi==1.17.1
+charset-normalizer==3.4.2
+cryptography==45.0.5
+DateTime==5.5
 dj-database-url==3.0.1
 Django==5.2.4
 gunicorn==23.0.0
+idna==3.10
+numpy==2.3.1
+openrouteservice==2.3.3
 packaging==25.0
+pandas==2.3.1
+paypalrestsdk==1.13.3
 psycopg2-binary==2.9.10
+pycparser==2.22
+pyOpenSSL==25.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+pytz==2025.2
+requests==2.32.4
+setuptools==80.9.0
+six==1.17.0
 sqlparse==0.5.3
+typing_extensions==4.14.1
 tzdata==2025.2
+urllib3==2.5.0
+zope.interface==7.2
